新增查询热门品牌接口
