# project-service/src/main/java/com/project/modules/cou/service/impl/CouWaresModelServiceImpl.java
@@ -127,16 +127,16 @@ public class CouWaresModelServiceImpl extends ServiceImpl<CouWaresModelDao, CouW
      */
     @Override
     public List<CouWaresModelInvokingVo> getCouModelList() {
-        List<CouWaresModelInvokingVo> modelList = JSONArray.parseArray(redisUtils.get(RedisKeys.CouWares.CouModel(RedisListKeyConstant.COU_WARES_MODEL_LIST)), CouWaresModelInvokingVo.class);
+        List<CouWaresModelInvokingVo> modelList = JSONArray.parseArray(redisUtils.get(RedisKeys.CouWares.CouModel(RedisListKeyConstant.COU_MODEL_LIST)), CouWaresModelInvokingVo.class);
         modelList = CollectionUtils.isNotEmpty(modelList) ? modelList : baseMapper.getCouModelList(Constant.Status.NORMAL.getStatus());
-        redisUtils.set(RedisKeys.CouWares.CouSeries(RedisListKeyConstant.COU_WARES_MODEL_LIST), modelList);
+        redisUtils.set(RedisKeys.CouWares.CouSeries(RedisListKeyConstant.COU_MODEL_LIST), modelList);
         return modelList;
     }
 
     //更新redis上的列表信息
     private void updateRedis() {
-        redisUtils.delete(RedisKeys.CouWares.CouModel(RedisListKeyConstant.COU_WARES_MODEL_LIST));
-        redisUtils.set(RedisKeys.CouWares.CouModel(RedisListKeyConstant.COU_WARES_MODEL_LIST), baseMapper.getCouModelList(Constant.Status.NORMAL.getStatus()));
+        redisUtils.delete(RedisKeys.CouWares.CouModel(RedisListKeyConstant.COU_MODEL_LIST));
+        redisUtils.set(RedisKeys.CouWares.CouModel(RedisListKeyConstant.COU_MODEL_LIST), baseMapper.getCouModelList(Constant.Status.NORMAL.getStatus()));
     }
 
     //获取DealWaresTypeEntity更新对象
